--- a/vignettes/RTfunctions.Rmd
+++ b/vignettes/RTfunctions.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reaction Time Functions"
+title: "Reaction Time Function in PCR"
 author: "Will Hopper"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -31,15 +31,20 @@ $$ RT = T_{min} + (T_{max}-T_{min})(e^{-\lambda |x|}) $$
 Tmin <- .5
 Tmax <- 90
 lambdas <- c(3,2,1,.75,.5,.25,.1)
-y <- sapply(lambdas, function(l) Tmin + (Tmax-Tmin)*exp(-l*abs(0:10))) %>%
+x <- seq(-10,10,by=.2)
+y <- sapply(lambdas, function(l) Tmin + (Tmax-Tmin)*exp(-l*abs(x))) %>%
   melt(value.name="RT") %>%
-  rename(x=Var1, lambda=Var2) %>%
-  mutate(lambda = lambdas[lambda])
+  rename(lambda=Var2) %>%
+  mutate(Var1 = rep(x,times= nrow(.)/length(x)),
+         lambda = lambdas[lambda]) %>%
+  rename(x=Var1)
 lambda_plot <- ggplot(y, aes(x=x,y=RT, color = factor(lambda))) +
   geom_line(size=.75) +
   scale_y_continuous(breaks=seq(0,90,by=10)) + 
   scale_color_discrete("Lambda") + 
-  scale_x_discrete("Distance to Threshold", breaks=0:10) + 
+  scale_x_continuous("Distance to Threshold", breaks=-10:10) + 
   ggtitle("Predicted RT for Different Lambdas")
 print(lambda_plot)
 ```
+
+Reaction times to distances below the threshold represent the time until the participant "gives up" on recalling and moves to a new item.
